<resources>
    <string name="app_name">No More Solo</string>
    <string name="text_for_the_day">Here are the match\nfor the day</string>
    <string name="side_of_the_force">You are from the Dark side of the force</string>
    <string name="which_side_of_the_force_you_want">Do you want to meet people\nfrom the same side of the force.</string>
    <string name="no_btn_text">No</string>
    <string name="yes_btn_text">Yes</string>
    <string name="genre">Genre</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="species">Species</string>
    <string name="mass">Mass</string>
    <string name="height">Height</string>
    <string name="validate">Validate</string>
    <string name="username">Username</string>
    <string name="no_page_choice">Ah ah ah !\nSorry, but you don\'t have the choice.</string>
    <string name="hello">Hello</string>
    <string name="phrase_1">Loading the blasters</string>
    <string name="phrase_2">Reading deep mind of the user</string>
    <string name="phrase_3">Preparing the perfect match</string>
    <string name="phrase_4">Putting some love in the air</string>
    <string name="phrase_5">Buying flower for the perfect mate</string>
    <string name="phrase_6">Calculating distance</string>
    <string name="phrase_7">Sortin the best result</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_enter_fiels">Please enter an email and a password !</string>
    <string name="bad_mail">Your password must contains letters</string>
    <string name="bad_auth">Bad authentication</string>
    <string name="back">Back</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_email">Please enter an email</string>
    <string name="pass_sent">Password sent</string>
    <string name="unknown_mail">Unknown email</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="send_msg">Send a message</string>
    <string name="mss_has_been_sent">Your message has been sent</string>
    <string name="my_profile_pic">My profile picture</string>
    <string name="register">Register ?</string>
    <string name="genre_">Genre : %s</string>
    <string name="species_">Species : %s</string>
    <string name="mass_nc">Mass : NC</string>
    <string name="mass_">Mass : %s</string>
    <string name="height_nc">Height : NC</string>
    <string name="height_">Height : %s</string>
    <string name="enter_msg">Enter your message</string>
</resources>
